--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,7 @@ body{
 a{color:#cecece;}
 h1{color:#ffffff;font-size:30px;line-height: 36px;font-variant: small-caps;letter-spacing:3pt;}
 h2{color:#ffffff;font-size:24px;line-height: 30px;font-variant: small-caps;}
-h3{color:#ffffff;font-size:16px;line-height: 26px;}
-h4{color:#ffffff;font-size:13px;line-height: 20px;}
+h3{color:#ffffff;font-size:13px;line-height: 16px;margin:10px 0 0 0;}
 #container{
 	padding:20px;margin:0 10px;
 	font-size: 13px; line-height: 20px;color:#ffffff;
