--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@ h4{color:#ffffff;font-size:13px;line-height: 20px;}
 	padding:20px;margin:0 10px;
 	font-size: 13px; line-height: 20px;color:#ffffff;
 }
+.alerte{ position: fixed;top:50vh;left: 48%; display:block; background:rgba(255,255,255,0.8);color:red;padding:20px;border:10px solid red;}
 #inst p{line-height:16px;}
 #cmd p{line-height:16px;margin:6px 0;}
 strong{font-size: xx-small;}
@@ -33,4 +34,21 @@ img{ width: 100%;display: block;}
 #cmd span.dos a { font-family:arial; font-weight:bold;display: block; background: #000000;color:#50f55d;padding:2px 10px;}
 div nth_of-type(3){
 	display:none;
+}
+.logoGit{
+	background-image: url(../images/git-bash.png);
+	background-repeat: no-repeat;
+	background-size: 100px;
+	background-position:top left;
+	height:100px;
+	padding-left: 120px;
+}
+#container h1:nth-of-type(1):after{
+	content:" (Utiliser GiT Bash)";
+	display: block;
+	font-size:24px;
+	font-weight:300;
+}
+.top{
+	padding-top:30px;
 }
