--- a/css/style.css
+++ b/css/style.css
@@ -10,28 +10,31 @@ body{
 	background-color: #353f4f;
 	letter-spacing: 1.5px;
 }
-a{color:#cecece;}
-h1{color:#ffffff;font-size:30px;line-height: 36px;font-variant: small-caps;letter-spacing:3pt;}
-h2{color:#ffffff;font-size:24px;line-height: 30px;font-variant: small-caps;}
-h3{color:#ffffff;font-size:16px;line-height: 26px;}
-h4{color:#ffffff;font-size:13px;line-height: 20px;}
 #container{
-	padding:20px;margin:0 10px;
-	font-size: 13px; line-height: 20px;color:#ffffff;
+	padding:30px;margin:0;
+	font-size:13px;
+	color:#fff;
+	margin-bottom:300px;
 }
+a{color:#cecece;}
+h1{color:#ffffff;font-size:30px;font-variant: small-caps;letter-spacing:3pt;}
+h2{color:#ffffff;font-size:18px;line-height: 26px;font-variant: small-caps;}
+h3{color:#ffffff;font-size:16px;line-height: 16px;margin:20px 0 0 0;}
+h4{color:#ffffff;font-size:12px;line-height: 14px;margin:10px 0 0 0;}
 .alerte{ position: fixed;top:50vh;left: 48%; display:block; background:rgba(255,255,255,0.8);color:red;padding:20px;border:10px solid red;}
 #inst p{line-height:16px;}
-#cmd p{line-height:16px;margin:6px 0;}
+#cmd p{margin:4px 0;}
+#cmd p .top{padding-top:40px;}
 strong{font-size: xx-small;}
 sup{font-size:12px;line-heigth:12px;}
 img{ width: 100%;display: block;}
 .r{ float: right;width: 50%; max-width: 500px;}
-#cmd span { display: inline-block;margin:0 2px; }
-#cmd span.n a { font-family:arial; font-weight:bold;display: block; background: #d2d02c;color:#333333;padding:2px 10px;}
-#cmd span.p a { font-family:arial; font-weight:bold;display: block; background: #eedba2;color:#333333;padding:2px 10px;}
-#cmd span.d a { font-family:arial; font-weight:bold;display: block; background: #c185ee;color:#333333;padding:2px 10px;}
-#cmd span.t a {color:#ffffff;padding:2px 10px;font-size: 12px; font-style: italic;	font-family:'roboto', arial; letter-spacing: 1px; font-weight: 100;}
-#cmd span.dos a { font-family:arial; font-weight:bold;display: block; background: #000000;color:#50f55d;padding:2px 10px;}
+#cmd span { display: inline-block;margin:2px; }
+#cmd span.n a { font-family:arial;font-weight:bold;display: block;background: #d2d02c;color:#333333;border:6px solid #d2d02c;}
+#cmd span.p a { font-family:arial; font-weight:bold;display: block; background: #eedba2;color:#333333;border:6px solid #eedba2;}
+#cmd span.d a { font-family:arial; font-weight:bold;display: block; background: #c185ee;color:#333333;border:6px solid #c185ee;}
+#cmd span.t a {color:#ffffff;padding:0 0 0 10px;font-size: 13px; font-style: italic;font-family:'roboto', arial; letter-spacing: 1px; font-weight: 100;display:block;}
+#cmd span.dos a { font-family:arial; font-weight:bold;display: block; background: #000000;color:#50f55d;border:6px solid #000000;}
 div nth_of-type(3){
 	display:none;
 }
@@ -49,6 +52,15 @@ div nth_of-type(3){
 	font-size:24px;
 	font-weight:300;
 }
-.top{
-	padding-top:30px;
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+	.hide{ display: none!important; }
+	.w100{ width:100% }
+	#container{font-size: 30px}
+	h1{color:#ffffff;font-size:40px;font-variant: small-caps;letter-spacing:3pt;}
+	h2{color:#ffffff;font-size:38px;line-height:auto;}
+	h3{color:#ffffff;font-size:30px;line-height:auto;font-weight:200;margin:20px 0 0 0;padding-top:20px;}
+	h4{color:#ffffff;font-size:14px;line-height:auto;font-weight:200;margin:10px 0 0 0;}
+	.alerte{ position: fixed;top:150px;left: 55%; display:block; background:rgba(255,255,255,0.8);color:red;padding:20px;border:10px solid red;}
+	#cmd span.t a {color:#cecece;padding:0 0 0 10px;font-size: 24px; font-style: italic;font-family:'roboto', arial; letter-spacing: 1px; font-weight: 100;display:block;}
+
 }
